<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/row_fr_main_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/row_iv_offer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/row_iv_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/overlay" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/row_tv_offername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_21"
                android:layout_marginRight="@dimen/dp_40"
                android:layout_toLeftOf="@+id/row_tv_offer_off"
                android:fontFamily="@font/opensans_semibold"
                android:maxLines="2"
                android:text="@string/offer_name"
                android:textColor="#ffffff"
                android:textSize="19sp" />


            <TextView
                android:id="@+id/row_tv_offer_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@drawable/bg_offer_off_tv"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center"
                android:minWidth="@dimen/dp_100"
                android:paddingLeft="@dimen/dp_9"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_9"
                android:paddingBottom="@dimen/dp_5"
                android:text="@string/buy1_get1"
                android:textColor="@color/color_blue"
                android:textSize="@dimen/sp_17" />

            <LinearLayout
                android:id="@+id/row_of_offer_list_ll_cont_offer_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@drawable/bg_offer_off_tv"
                android:gravity="center"
                android:minWidth="@dimen/dp_100"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_9"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_9"
                android:paddingBottom="@dimen/dp_5"
                android:visibility="gone">

                <TextView
                    android:id="@+id/row_of_offer_tv_numeric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:text="45%"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/sp_20" />

                <TextView
                    android:id="@+id/row_of_offer_tv_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:text="OFF"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/sp_13" />

            </LinearLayout>

            <TextView
                android:id="@+id/row_tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row_tv_offername"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/dates"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:id="@+id/row_iv_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_10"
                android:src="@drawable/view" />
        </RelativeLayout>

    </FrameLayout>
</layout>